--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/Neocyber
+spring.datasource.username = root
+spring.datasource.password = Rahi-8000
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+server.port = 80
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+spring.mail.host = localhost
+spring.mail.port=40050
+spring.mail.username=hello
+spring.mail.password=hello
+spring.mail.protocol=smtp
