--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,12 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 server.port = 80
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
-spring.mail.host = localhost
-spring.mail.port=40050
-spring.mail.username=hello
-spring.mail.password=hello
-spring.mail.protocol=smtp
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=neocybermr2021@gmail.com
+spring.mail.password=NeoCyber-2021
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
