--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username = root
 spring.datasource.password = Rahi-8000
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 server.port = 80
 spring.servlet.multipart.max-file-size=5MB
